Atualizar senhas para 1!@Fag.dev

--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ N8N_HOST=n8n.giacomo.dev.br
 # ==============================================
 POSTGRES_DB=n8n_production
 POSTGRES_USER=n8n_user
-POSTGRES_PASSWORD=N8n_Pr0d_P@ssw0rd_2024!
+POSTGRES_PASSWORD=1!@Fag.dev
 N8N_DB_SCHEMA=public
 
 # ==============================================
@@ -28,7 +28,7 @@ N8N_ENCRYPTION_KEY=your-unique-32-char-hex-encryption-key-here
 
 # JWT Secret para autenticação (IMPORTANTE: Gere um secret único)
 # Execute: openssl rand -hex 64
-N8N_JWT_SECRET=your-unique-64-char-hex-jwt-secret-here
+N8N_JWT_SECRET=1!@Fag.dev
 
 # Timeouts de execução (em segundos)
 N8N_EXECUTIONS_TIMEOUT=3600
@@ -55,7 +55,7 @@ N8N_EMAIL_MODE=smtp
 N8N_SMTP_HOST=smtp.gmail.com
 N8N_SMTP_PORT=587
 N8N_SMTP_USER=seu-email@gmail.com
-N8N_SMTP_PASS=sua-senha-de-app
+N8N_SMTP_PASS=1!@Fag.dev
 N8N_SMTP_SENDER="N8N Automation <seu-email@gmail.com>"
 
 # ==============================================
@@ -76,4 +76,3 @@ BACKUP_S3_REGION=us-east-1
 # MONITORING (OPCIONAL)
 # ==============================================
 ENABLE_MONITORING=true
-GRAFANA_ADMIN_PASSWORD=Gr@f@n@_Adm1n_2024!
