Atualizar configuração para usar Cloudflare API Token

--- a/.env.example
+++ b/.env.example
@@ -45,6 +45,11 @@ N8N_PUBLIC_API_DISABLED=false
 # ==============================================
 # CLOUDFLARE TUNNEL
 # ==============================================
+# API Token do Cloudflare (necessário para criar e gerenciar túneis)
+# Crie em: Cloudflare Dashboard > My Profile > API Tokens
+# Permissões necessárias: Zone:DNS:Edit, Account:Cloudflare Tunnel:Edit
+CLOUDFLARE_API_TOKEN=your-cloudflare-api-token-here
+
 # Token do túnel Cloudflare (obtenha no dashboard)
 CLOUDFLARE_TUNNEL_TOKEN=your-cloudflare-tunnel-token-here
 
