Atualização completa do projeto N8N

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,10 @@
 # ==============================================
+# VERSÃO DO COMPOSE
+# ==============================================
+COMPOSE_PROJECT_NAME=n8n-production
+COMPOSE_FILE=docker-compose.yml
+
+# ==============================================
 # CONFIGURAÇÕES PRINCIPAIS - N8N PRODUÇÃO
 # ==============================================
 
@@ -33,6 +39,14 @@ N8N_JWT_SECRET=1!@Fag.dev
 # Timeouts de execução (em segundos)
 N8N_EXECUTIONS_TIMEOUT=3600
 N8N_EXECUTIONS_TIMEOUT_MAX=7200
+
+# ==============================================
+# QDRANT - BANCO VETORIAL
+# ==============================================
+QDRANT_HTTP_PORT=6333
+QDRANT_GRPC_PORT=6334
+QDRANT_STORAGE_PATH=/qdrant/storage
+QDRANT_LOG_LEVEL=INFO
 
 # ==============================================
 # N8N - CONTEÚDO DA COMUNIDADE
