--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 .env
 *.env.local
 *.env.production
-*.backup
+*.env.backup*
 
 # Dados dos containers
 data/
@@ -14,12 +14,10 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-package-lock.json
 
 # Sistema
 .DS_Store
 Thumbs.db
-*.log
 
 # IDE
 .vscode/
@@ -27,13 +25,12 @@ Thumbs.db
 *.swp
 *.swo
 
-# Temporários
-tmp/
-temp/
-*.tmp
+# Backups
+*.backup
 
-# Cloudflared
-.cloudflared/
+# Bolt
+.bolt/
 
-# Docker
-*.pid
+# Lock files
+package-lock.json
+yarn.lock
