--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,8 @@ services:
       POSTGRES_INITDB_ARGS: --encoding=UTF-8 --lc-collate=C --lc-ctype=C
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./config/postgres/postgresql.conf:/etc/postgresql/postgresql.conf:ro
+      - ./config/postgres/postgresql.conf:/usr/local/share/postgresql/postgresql.conf:ro
+    command: ["postgres", "-c", "config_file=/usr/local/share/postgresql/postgresql.conf"]
     networks:
       - n8n-internal
     healthcheck:
@@ -62,10 +63,10 @@ services:
     container_name: n8n-qdrant
     restart: unless-stopped
     environment:
-      QDRANT__SERVICE__HTTP_PORT: ${QDRANT_HTTP_PORT}
-      QDRANT__SERVICE__GRPC_PORT: ${QDRANT_GRPC_PORT}
-      QDRANT__STORAGE__STORAGE_PATH: ${QDRANT_STORAGE_PATH}
-      QDRANT__LOG_LEVEL: ${QDRANT_LOG_LEVEL}
+      QDRANT__SERVICE__HTTP_PORT: ${QDRANT_HTTP_PORT:-6333}
+      QDRANT__SERVICE__GRPC_PORT: ${QDRANT_GRPC_PORT:-6334}
+      QDRANT__STORAGE__STORAGE_PATH: ${QDRANT_STORAGE_PATH:-/qdrant/storage}
+      QDRANT__LOG_LEVEL: ${QDRANT_LOG_LEVEL:-INFO}
     volumes:
       - qdrant_data:/qdrant/storage
       - ./config/qdrant/config.yaml:/qdrant/config/production.yaml:ro
