--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 .env
 *.env.local
 *.env.production
-*.env.backup*
+*.backup
 
 # Dados dos containers
 data/
@@ -14,10 +14,12 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+package-lock.json
 
 # Sistema
 .DS_Store
 Thumbs.db
+*.log
 
 # IDE
 .vscode/
@@ -25,12 +27,13 @@ Thumbs.db
 *.swp
 *.swo
 
-# Backups
-*.backup
+# Temporários
+tmp/
+temp/
+*.tmp
 
-# Bolt
-.bolt/
+# Cloudflared
+.cloudflared/
 
-# Lock files
-package-lock.json
-yarn.lock
+# Docker
+*.pid
